# channels-mqtt-proxy

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
chanmqttproxy/: channelsmqttproxy.py
chanmqttsproxy/: __init__.py  channelsmqttproxy.py  mqttconsumer.py
examples/: README.md
examples/mysite/chat/: consumers.py  routing.py  views.py
examples/mysite/chat/templates/chat/: index.html
examples/mysite/mysite/: asgi.py  settings.py  urls.py
