[metadata]
name = chanmqttsproxy
version = 0.1
author = peyoot
author_email = peyoot@hotmail.com
url = https://github.com/peyoot/channels-mqtt-proxy
description = Channels Worker providing async (qmqtt) MQTT proxy, add mqtts support by peyoot
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
[options]
packages = chanmqttsproxy
install_requires =
    gmqtt
