[metadata]
name = chanmqttproxy
version = 0.1
author = David Greaves
author_email = david@dgreaves.com
url = https://github.com/lbt/channels-mqtt-proxy
description = Channels Worker providing async (qmqtt) MQTT proxy
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
[options]
packages = chanmqttproxy
install_requires =
    gmqtt

[options.extras_require]
examples =
    Django                     >= 4.0.0
    channels		       >= 4.0.0
    channels_redis
    daphne		       >= 4.0.0
